clean commit without secrets